[tool.poetry]
name = "jake-and-ai"
version = "0.1.0"
description = "Classification of Jake and Amir episodes with NLP methods"
authors = ["Daniel Groothuysen <theblenderer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
